--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>bimaproyek</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>WEB SEKOLAH</h1>
