--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>bimaproyek</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel='website icon' type='png' href='pngwing.com.png'>
   </head>
   <body>
     <h1>WEB SEKOLAH</h1>
