--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>bimaproyek</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel='website icon' type='png' href='pngwing.com.png'>
+    <link rel='website icon' type='png' href='PPLG.png'>
   </head>
   <body>
     <h1>WEB SEKOLAH</h1>
