--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel='website icon' type='png' href='PPLG.png'>
   </head>
   <body>
-    <h1>WEB SEKOLAH</h1>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">
+                <img src="https://smkn1blega.sch.id/theme/images/logo-kecil.png" alt="Logo Sekolah">
+            </div>
+        </div>
+    </nav>
   </body>
 </html>
